# Linux-SoundBoard

./: .gitattributes  .gitignore  APPIMAGE_ANALYSIS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGS  PACKAGING.md  README.md  ROUTING_FIX_PLAN.md  THIRDPARTY_LICENSES.md  build-deb.sh  build-rpm.sh  debug-numpad.sh  install.sh
.github/workflows/: ci.yml  release.yml
assets/screenshots/: README.md
docs/: BUG_REPORTS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_REFERENCE.md  INSTALL.md  SCREENSHOTS.md  TROUBLESHOOTING.md
packaging/: common.sh
packaging/aur/: .SRCINFO  PKGBUILD  linux-soundboard.install
packaging/aur/linux-soundboard-git/: .SRCINFO  .gitignore  PKGBUILD  linux-soundboard-git.install
packaging/deb/: control
packaging/debian/: changelog  control  copyright  linux-soundboard.desktop  package-deb.sh  postinst  prerm  rules
packaging/flatpak/: FLATHUB_SUBMISSION.md  com.linuxsoundboard.app.desktop  com.linuxsoundboard.app.metainfo.xml  com.linuxsoundboard.app.yml  package-flatpak.sh
packaging/linux/: app-meta.sh  appimage-preflight-check.sh  com.linuxsoundboard.install-swhkd.policy  generate-icons.sh  install-swhkd-helper.sh  install-user.sh  linux-soundboard-engine.service  package-appimage.sh  package-release.sh
packaging/pipewire/: 99-linuxsoundboard.conf
packaging/pulse/: default.pa.snippet
packaging/rpm/: linux-soundboard.spec  package-rpm.sh
scripts/: build-fedora.sh  install.sh  test-fedora.sh
src/: Cargo.toml
src-tauri/: Cargo.toml
src-tauri/assets/: dark.css  light.css
src-tauri/resources/: resources.gresource.xml
src-tauri/src/: app_meta.rs  bootstrap.rs  main.rs
src-tauri/src/audio/: loudness.rs  mod.rs  scanner.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs  shared.rs
src-tauri/src/config/: mod.rs  persistence.rs
src-tauri/src/diagnostics/: memory.rs
src-tauri/src/hotkeys/: mod.rs  model.rs
src-tauri/src/pipewire/: detection.rs  virtual_mic.rs
src-tauri/src/ui/: app_window.rs  dialogs.rs  mod.rs  settings.rs  sound_list.rs  theme.rs  transport.rs
src/.codegrok/: metadata.json
src/.codegrok/chroma/: chroma.sqlite3
src/app/: app_meta.rs  app_state.rs  audio_engine.rs  bootstrap.rs  lib.rs  main.rs  playback_bridge.rs  timer_registry.rs  ui_event_bridge.rs
src/app/audio/: analysis_worker.rs  engine_ipc.rs  file_link.rs  loudness.rs  loudness_acceptance.rs  metadata.rs  mod.rs  player.rs  scanner.rs
src/app/audio/player/: command_handlers.rs  explicit_links.rs  limiter.rs  mixing.rs  mod.rs  playback.rs  pulse_backend.rs  queues.rs  source_autoroute.rs  source_routing.rs  streams.rs
src/app/commands/: hotkeys.rs  library.rs  mod.rs  playback.rs  settings.rs  shared.rs  tabs.rs  tests.rs
src/app/config/: defaults.rs  migration.rs  mod.rs  persistence.rs  types.rs
src/app/diagnostics/: memory.rs  mod.rs  routing.rs
src/app/hotkeys/: backend_runtime.rs  error.rs  manager_runtime.rs  mod.rs  model.rs  swhkd_backend.rs  swhkd_config.rs  swhkd_install.rs  swhkd_process.rs  x11_backend.rs
src/app/init/: audio.rs  config.rs  error.rs  hotkeys.rs  mod.rs  ui.rs
src/app/pipewire/: command_runner.rs  detection.rs  mod.rs  persistent_mic.rs  virtual_mic.rs
src/app/test_support/: audio_fixtures.rs  mod.rs
src/app/ui/: app_window.rs  dialogs.rs  dnd_import.rs  icons.rs  menu.rs  mod.rs  settings.rs  sound_list.rs  tab_dnd.rs  tabs_sidebar.rs  theme.rs  transport.rs  window_identifier.rs
src/app/ui/sound_list/: columns.rs  interaction.rs  mod.rs  model.rs  view_state.rs
src/app/ui/transport/: build.rs  helpers.rs  mod.rs  playback.rs  scrub.rs  signals.rs
src/assets/: dark.css  light.css
src/resources/: resources.gresource.xml
src/src/: app_meta.rs  app_state.rs  bootstrap.rs  lib.rs
src/src/audio/: analysis_worker.rs  file_link.rs  loudness.rs  metadata.rs  mod.rs  player.rs
src/src/commands/: hotkeys.rs  library.rs  mod.rs  playback.rs  settings.rs  tabs.rs
src/src/config/: defaults.rs  mod.rs  persistence.rs  types.rs
src/src/diagnostics/: mod.rs
src/src/hotkeys/: backend_runtime.rs  manager_runtime.rs  mod.rs  model.rs  portal_backend.rs  portal_trigger.rs  swhkd_backend.rs  swhkd_config.rs  swhkd_install.rs  swhkd_process.rs  x11_backend.rs
src/src/init/: audio.rs  error.rs  hotkeys.rs  ui.rs
src/src/pipewire/: detection.rs
src/src/ui/: app_window.rs  dialogs.rs  mod.rs  settings.rs  sound_list.rs  tabs_sidebar.rs  transport.rs  window_identifier.rs
src/tests/: config_tests.rs  test_main.rs
src/tests/common/: audio_mock.rs  config_fixture.rs  mod.rs  temp_dir.rs
src/themes/: dark.css  light.css
