[package]
name = "linux-soundboard"
version = "1.1.0"
description = "A Linux soundboard with PipeWire virtual mic support"
authors = ["you"]
edition = "2021"
rust-version = "1.85"
license = "PolyForm-Noncommercial-1.0.0"
license-file = "../LICENSE"

[lib]
name = "linux_soundboard"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/test_main.rs"

[build-dependencies]
glib-build-tools = "0.20"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1.8"
rodio = { version = "0.18", features = ["symphonia-mp3", "symphonia-wav", "symphonia-vorbis", "symphonia-flac", "symphonia-aac", "symphonia-isomp4"] }
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "aac", "isomp4"] }
libpulse-binding = "2"
libpulse-simple-binding = "2"
ebur128 = "0.1"
parking_lot = "0.12"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
which = "6"
chrono = "0.4"
x11 = { version = "2.21", features = ["xlib", "xinput"] }

[dev-dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "unwind"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/linux-soundboard", dest = "/usr/bin/linux-soundboard", mode = "755" }
]
